--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@
 
 a {
     display: inline-block;
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
 }
 
 .section {
@@ -45,6 +51,10 @@ a {
     padding: 10px;
 }
 
+.desk-none {
+    display: none;
+}
+
 .flex {
     display: flex;
 }
@@ -55,6 +65,108 @@ a {
 
 .w-100 {
     width: 100%;
+}
+
+/* nav */
+
+.nav {
+    align-items: center;
+    justify-content: space-between;
+    transition: all .2s;
+}
+
+.logo {
+    margin-right: 40px;
+}
+
+.nav-li {
+    padding: 5px 15px;
+}
+
+.navlink {
+    padding: 0px 2px;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+.menu-body {
+    align-items: center;
+    justify-content: space-between;
+    transition: all .2s;
+}
+
+.nav-btn {
+    margin-left: 10px;
+    padding: 5px 25px;
+}
+
+.signup-btn {
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border: 2px solid var(--dark-color);
+}
+
+.signin-btn {
+    background-color: var(--primary-color);
+    color: var(--light-color);
+    border: 2px solid var(--primary-color);
+}
+
+.hamburg {
+    display: none;
+}
+
+.hamburg-wrap {
+    width: 25px;
+    height: 25px;
+    justify-content: center;
+    align-items: center;
+}
+.hamburg-btn:hover {
+    cursor: pointer;
+}
+
+.lines,
+.lines::after,
+.lines::before {
+    display: inline-block;
+    height: 3px;
+    width: 25px;
+    background-color: var(--primary-color);
+    position: relative;
+    transition: all .2s;
+}
+.lines::after,
+.lines::before {
+    content: "";
+    left: 0;
+    right: 0;
+    position: absolute;
+    top: 7px;
+}
+.lines::after {
+    top: 7px;
+}
+.lines::before {
+    top: -7px;
+}
+.hamburg-btn:hover .lines::after {
+    top: 8px;
+}
+.hamburg-btn:hover .lines::before {
+    top: -8px;
+}
+
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines {
+    background-color: transparent;
+}
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines::after {
+    top: 0;
+    transform: rotate(135deg);
+}
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines::before {
+    top: 0;
+    transform: rotate(-135deg);
 }
 
 /* landing */
@@ -98,6 +210,22 @@ a {
 }
 
 @media (max-width: 767.98px) {
+    .desk-none {
+        display: block;
+    }
+    .nav {
+        flex-wrap: wrap;
+    }
+    .nav-ul,
+    .menu-body {
+        flex-direction: column;
+    }
+    .menu-body {
+        display: none;
+    }
+    .hamburg:checked ~ .menu-body {
+        display: flex;
+    }
     .flight-grid {
         grid-template-columns: 1fr 1fr;
     }
