--- a/dashboard/css/general.css
+++ b/dashboard/css/general.css
@@ -31,15 +31,41 @@
 
 /* body {} */
 
+a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
+}
+
 .section {
     padding: 40px 5px;
 }
 
 .container {
     max-width: 900px;
+    margin: 0 auto;
     padding: 10px;
 }
 
+.desk-none {
+    display: none;
+}
+
+.flex {
+    display: flex;
+}
+
+.grid {
+    display: grid;
+}
+
+.w-100 {
+    width: 100%;
+}
 
 /* nav */
 
@@ -86,10 +112,61 @@
     border: 2px solid var(--primary-color);
 }
 
+.hamburg {
+    display: none;
+}
+
+.hamburg-wrap {
+    width: 25px;
+    height: 25px;
+    justify-content: center;
+    align-items: center;
+}
+.hamburg-btn:hover {
+    cursor: pointer;
+}
+
 .lines,
 .lines::after,
 .lines::before {
+    display: inline-block;
+    height: 3px;
+    width: 25px;
     background-color: var(--primary-color);
+    position: relative;
+    transition: all .2s;
+}
+.lines::after,
+.lines::before {
+    content: "";
+    left: 0;
+    right: 0;
+    position: absolute;
+    top: 7px;
+}
+.lines::after {
+    top: 7px;
+}
+.lines::before {
+    top: -7px;
+}
+.hamburg-btn:hover .lines::after {
+    top: 8px;
+}
+.hamburg-btn:hover .lines::before {
+    top: -8px;
+}
+
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines {
+    background-color: transparent;
+}
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines::after {
+    top: 0;
+    transform: rotate(135deg);
+}
+.hamburg:checked ~ .hamburg-btn .hamburg-wrap .lines::before {
+    top: 0;
+    transform: rotate(-135deg);
 }
 
 /* landing */
